feat: Enhance HR Dashboard with Attendance Summary and Department Employee Counts
- Added a new query in EmployeeRepository to summarize employee counts by department.
- Updated HRController to include attendance summary attributes for checked-in, early, standard, and late check-ins.
- Modified HRDashboardServiceImpl to calculate attendance summary and integrate it into the dashboard view.
- Introduced HRAttendanceSummaryView model to encapsulate attendance summary data.
- Enhanced hr_dashboard.html to display attendance breakdown with check-in counts and time boundaries.
- Created AttendanceEventTimeResolver to handle attendance event time calculations.
- Added tests for HRDashboardServiceImpl and attendance template rendering.
- Updated CSS for improved attendance summary presentation.